@@ -30,8 +30,11 @@ ralcalc -h
 The -q option causes the input and any error messages to be not printed to the
 screen.
 
-The -e option causes the result to be display in the "1e-3" form rather than
+The -e option causes the result to be displayed in the "1e-3" form rather than
 with SI prefixes.
+
+The -r option causes the result to be displayed with neither SI prefixes nor
+exponents.
 
 
 Operators
